--- a/practicas/Conecta4Online/app/src/main/AndroidManifest.xml
+++ b/practicas/Conecta4Online/app/src/main/AndroidManifest.xml
@@ -18,10 +18,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".About" />
-        <activity android:name=".Settings" />
-        <activity android:name=".InterfazOnline" />
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".About">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".Settings">
+        </activity>
+        <activity android:name=".InterfazOnline">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
